welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:7: error: identifier expected but integer literal found.
    motif[i-1] = couleur
            ^Array1:8: error: ']' expected but ';' found.
    avance()
^Array1:13: error: identifier expected but integer literal found.
    setCouleurBrosse(motif[i-1])
                             ^Array1:15: error: ']' expected but '}' found.
  }}
  ^